syntax = "proto3";

import "github.com/printfcoder/home/proto/common/response/response.proto";
import "github.com/printfcoder/home/proto/common/time/time.proto";
import "github.com/printfcoder/home/proto/common/page/page.proto";

service Book {
    rpc AddExpense (AddExpenseRequest) returns (response.Response) {
    }
    rpc DeleteExpense (DeleteExpenseRequest) returns (response.Response) {
    }
    rpc UpdateExpense (UpdateExpenseRequest) returns (response.Response) {
    }
    rpc ListExpenses (ListExpensesRequest) returns (response.Response) {
    }
}

message Expense {
    int64 id = 1;
    int64 label = 2;
    float value = 3;
    string accountType = 4;
    repeated int64 members = 5;
    int64 time = 6;
}

message AddExpenseRequest {
    Expense expense = 1;
}

message DeleteExpenseRequest {
    int64 id = 1;
}

message UpdateExpenseRequest {
    Expense expense = 1;
}

message ListExpensesRequest {
    page.Page page = 1;
    time.TimeSpan timeSpan = 2;
    repeated int64 labels = 3;
    repeated string accountTypes = 4;
    repeated int64 members = 5;
}